fix overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -12,4 +12,5 @@ canvas {
 body {
 	background-color: black;
 	padding: 5px;
+	box-sizing: border-box;
 }
